assets/style.css
body
{
    background-color:rgb(116, 161, 167);
}

.header, .main, .footer
{
    width: 80%;
    margin:10px auto;
}
/* header */
.header 
{
    background-color: rgb(209 234 244);
    height: 100px;
}
    /* menu bar */
    .logo
    {
        float: left;
    }
    .logo img
    {
        height: 90px;
        width: 300px; 
        margin: 5px;  
    }
    .menu
    {
        float: right;
        margin: 20px;
    }
    .menu ul li
    {
        list-style: none;
        display: inline;
        
    }
    .menu ul li:not(:last-child)
    {
        margin-right: 100px;
    }
    .menu ul li a
    {
        text-decoration: none;
        font-size: 20px;
        color: rgb(64, 121, 93);
        border-style: solid;
        border-color: rgb(68, 68, 64);
        border-width: 2px;
        padding: 5px;
    }
    .menu ul li a:hover
    {
        background-color: lightcyan;
    }

/* main part */
.main
{
    height: 100vh;
    background-color: rgb(156 192 207);
}
    /* sidebar */
    .sidebar
    {
        height: 100%;
        width: 20%;
        background-color: rgb(98, 174, 204);
        float: left;
    }
    .sidebar ul li{
        list-style: none;
        margin-top: 50px;
        background-color: rgb(82, 150, 146);
    }
    .sidebar ul li a
    {
        text-decoration: none;
        padding: 10px;
        font-size: 20px;
        display: table;
        margin: 0 auto;
        color: black;
    }
    .sidebar ul li a:hover
    {
        background-color: rgb(112, 206, 206);
        color: darkgreen;
        
    }
    /*content*/
    .content
    {
        height: 100%;
        width: 80%;
        /* background-color: blue; */
        float: left;
    }
    .content img{
        height: 100%;
        width: 80%;
        display: block;
        margin: auto;
       
    }
    .about img
    {
        height: 100%;
        width: 80%;
        display: block;
        margin: auto;
    }
    .about p
    {
        text-align: center;
    }
    .contact
    {
        padding-top: 10%;
    }
    .contact p{
        text-align: center;
        font-size: 20px;
    }

/* footer */
.footer
{
    height: 100px;
    background-color: rgb(209 234 244);
}
.footer p{
    text-align: center;
    line-height: 6em;
}

